# minimal

./: .gitignore  Cargo.toml  minconfig.json
src/: main.rs  min.rs
