[package]
name = "minimal"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive"] }
colored = "3.0.0"
copypasta = "0.10.2"
data-encoding = "2.9.0"
futures-lite = "2.6.1"
iroh = "0.93.2"
iroh-gossip = "0.93.1"
rand = "0.9.2"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
