[package]
name = "minimal"
version = "0.5.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
data-encoding = "2.9.0"
futures-lite = "2.6.1"
hashbag = "0.1.12"
iroh = "0.93.2"
iroh-gossip = "0.93.1"
rand = "0.9.2"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
